# lambda-hs

./: LICENSE.md  flake.nix  lambda.cabal  lambda.hs
Lambda/: Lambda.hs
app/: lambda.hs
src/: Lambda.hs
test/: lambda.hs
