cabal-version: 3.0
name: lambda
version: 0.1.0.0
homepage: https://codeberg.org/eownerdead/lambda-hs
license: 0BSD
license-file: LICENSE.md
author: EOWNERDEAD
maintainer: eownerdead@disroot.org
copyright: EOWNERDEAD
build-type: Simple

common common
    default-language: GHC2021
    default-extensions:
        NoImplicitPrelude,
        OverloadedStrings,
    ghc-options: -Wall
    build-depends:
        base ^>=4.17.2.0,
        relude ^>=1.2.1.0,

library lambda-lib
    import: common
    hs-source-dirs: src
    build-depends:
        containers ^>=0.6.0,
    exposed-modules: Lambda

executable lambda
    import: common
    hs-source-dirs: app
    main-is: lambda.hs
    build-depends: lambda-lib
    other-modules: Lambda

test-suite lambda-test
    import: common
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: lambda.hs
    build-depends:
        lambda-lib,
        hspec ^>=2.10.0,
    -- other-modules: Lambda.Lambda
